objects/Launch_Product__c.object
<CustomObject>
    <description>Used by CB Services to add Launch Products to Launch</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Launch Products</relationshipLabel>
        <relationshipName>Launch_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Type__c</fullName>
        <label>Ad Type</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick/GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MINI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toyota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volkswagen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCO_Adjusted__c</fullName>
        <label>CCO Adjusted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conquest_Targets__c</fullName>
        <label>Conquest Targets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Offer__c</fullName>
        <label>Default Offer</label>
        <picklist>
            <picklistValues>
                <fullName>APR Finance Credit Advertising w/o Trigger Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APR Finance Offers w/ Trigger Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Chevy Owners w/ Trade-In Eligible Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign and Drive Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting at MSRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Value (Supplier Pricing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Value (w/o Trade In)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <label>Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Ad_RefID__c</fullName>
        <label>Display Ad Reference ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Ad_URL__c</fullName>
        <label>Display Ad URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Display_Ads_Entered_Scheduled__c</fullName>
        <label>Display Ads Entered/Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Banner_Video_Ad_Ref_Order_ID__c</fullName>
        <label>In Banner Video Ad Ref Order ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Banner_Video_Ad_URL__c</fullName>
        <label>In Banner Video Ad URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch_Products6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Setup_Complete__c</fullName>
        <label>Setup Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Launch_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Landing_Page_URL__c</fullName>
        <label>Landing Page URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LaunchID__c</fullName>
        <label>Launch ID</label>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Launch Products</relationshipLabel>
        <relationshipName>Launch_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Media_Budget_Entered__c</fullName>
        <label>Media Budget Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Planned__c</fullName>
        <label>Media Planned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Media_Submitted__c</fullName>
        <label>Media Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mock_Up_Approved_by_Client__c</fullName>
        <label>Mock Up Approved by Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mock_Up_Approved_by_Legal__c</fullName>
        <label>Mock Up Approved by Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <inlineHelpText>Enter YYYY</inlineHelpText>
        <label>Model Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Brand__c</controllingField>
            <picklistValues>
                <fullName>Acadia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acadia Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avalanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canyon Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corvette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTS-V Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equinox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lacrosse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malibu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 1500 Denali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500 Denali HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 2500HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sierra 3500 Denali HD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <label>Monthly Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_Code__c</fullName>
        <label>Offer Editor Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_Model__c</fullName>
        <label>Offer Editor Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_Trim__c</fullName>
        <label>Offer Editor Trim</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_Type__c</fullName>
        <label>Offer Editor Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_URL__c</fullName>
        <label>Offer Editor URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Offer_Editor_Year__c</fullName>
        <label>Offer Editor Year</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Package_Created_in_DAP_UI__c</fullName>
        <label>Package Created in DAP UI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Page_Title__c</fullName>
        <label>Page Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Roll_Setup__c</fullName>
        <label>Pre-Roll Setup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Regional_Offers__c</fullName>
        <label>Preferred Regional Offers</label>
        <picklist>
            <picklistValues>
                <fullName>APR Finance Credit Advertising w/o Trigger Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APR Finance Offers w/ Trigger Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Chevy Owners w/ Trade-In Eligible Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign and Drive Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starting at MSRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Value (Supplier Pricing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Value (w/o Trade In)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_for_UI_Setup__c</fullName>
        <label>Ready for UI Setup</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retargeting_Ads_Entered_Target_Selected__c</fullName>
        <label>Retargeting Ads Entered/Target Selected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scrolling_Inventory_Ad_Ref_Order_ID__c</fullName>
        <label>Scrolling Inventory Ad Ref Order ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scrolling_Inventory_Ad_URL__c</fullName>
        <label>Scrolling Inventory Ad URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Search_Ads_Entered_Scheduled__c</fullName>
        <label>Search Ads Entered/Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategy_Budget_Entered__c</fullName>
        <label>Strategy Budget Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Conquest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Budget__c</fullName>
        <label>Total Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <label>Trim</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URLs_Entered__c</fullName>
        <label>URLs Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WebID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WebID__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WebID__c</referenceTo>
        <relationshipLabel>Launch Products</relationshipLabel>
        <relationshipName>Launch_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Launch Product</label>
    <nameField>
        <displayFormat>LP-{000000}</displayFormat>
        <label>Launch Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Launch Products</pluralLabel>
    <recordTypes>
        <fullName>LMA_Launch_Product</fullName>
        <active>true</active>
        <label>LMA Launch Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>